# src/routers/product.router.js
@@ -18,7 +18,15 @@ productRouter.get('/:id', asyncHandler(async (req, res) => {
 
 productRouter.post('/', asyncHandler(async (req, res) => {
     // #swagger.tags = ['Product']
-    res.json('product');
+    const id = req.body.id;
+    const name = req.body.name;
+    const description = req.body.description;
+    const price = req.body.price;
+    const discount = req.body.discount;
+    const status = req.body.status;
+    const result = await productService.createProduct({id, name, description, price, discount, status});
+    return successResponse(res, new ResponseData({ result }));
+
 }));
 
 productRouter.put('/:id', asyncHandler(async (req, res) => {
